tests/passing/generics_type_def_multi_step.tails
type Second<B> = B
type First<A> = Second<A>

func tests() -> unit:
  let a: First<int> = 123
  let b: int = 123
