tests/failing/type_def_mutually_recursive_usage.tails
type A = B
type B = A

func tests() -> unit:
  let a: A = 123

  pass
